added styles to reservation steps

--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -28,6 +28,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  border: 1px solid #dcdcdc;
 }
 
 .label-holder {
@@ -49,7 +50,7 @@ textarea + .label-holder {
 .label-holder label {
   font-weight: 600;
   font-size: 1rem;
-  color: #7c7484;
+  color: #4c494e;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -70,7 +71,7 @@ textarea {
 }
 
 .invalid-input {
-  background-color: rgba(255, 0, 0, 0.2);
+  background-color: rgba(255, 0, 0, 0.4);
 }
 
 input {
