--- a/src/components/ReservationForm/ReservationForm.module.css
+++ b/src/components/ReservationForm/ReservationForm.module.css
@@ -44,7 +44,7 @@ textarea + .label-holder {
 .label-holder label {
   font-weight: 600;
   font-size: 1rem;
-  color: #7c7484;
+  color: #4c494e;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
