--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -40,7 +40,7 @@
 }
 
 .testimonial-inner span {
-  color: #7c7484;
+  color: #4c494e;
   font-size: 0.875rem;
   margin-bottom: 16px;
   margin-top: 4px;
