--- a/src/components/Step2/Step2.module.css
+++ b/src/components/Step2/Step2.module.css
@@ -84,11 +84,11 @@
 .radio-group {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 12px;
 }
 
 .radio-group input {
-  width: 1.25rem;
+  transform: scale(1.5) translateX(25%);
   position: relative;
 }
 
@@ -110,92 +110,6 @@
 .two-form-controls {
   display: flex;
   gap: 16px;
-}
-
-.form-group {
-  position: relative;
-  background-color: var(--white-secondary);
-  border-radius: 5px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  border: 1px solid #dcdcdc;
-}
-
-.label-holder {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  transform: translateY(-50%);
-  pointer-events: none;
-  transition: 500ms ease-out;
-}
-
-textarea + .label-holder {
-  top: 28px;
-}
-
-.label-holder label {
-  font-weight: 600;
-  font-size: 1rem;
-  color: #4c494e;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-}
-
-input,
-textarea {
-  background-color: transparent;
-  border: none;
-  outline: none;
-  border-radius: 5px;
-  padding: 0 16px;
-  width: 100%;
-  font-size: 1rem;
-  font-weight: 600;
-  transition: 250ms ease-out;
-}
-
-.invalid-input {
-  background-color: rgba(255, 0, 0, 0.2);
-}
-
-input {
-  height: 57px;
-}
-
-textarea {
-  padding: 28px 16px;
-}
-
-::placeholder {
-  opacity: 0;
-}
-
-input:focus + .label-holder,
-input:not(:placeholder-shown) + .label-holder,
-textarea:focus + .label-holder,
-textarea:not(:placeholder-shown) + .label-holder {
-  top: 10px;
-  transform: translateY(-50%);
-}
-
-input:focus + .label-holder label,
-textarea:focus + .label-holder label,
-input:not(:placeholder-shown) + .label-holder label,
-textarea:not(:placeholder-shown) + .label-holder label {
-  font-size: 12px;
-}
-
-input:focus + .label-holder img,
-input:not(:placeholder-shown) + .label-holder img {
-  width: 12px;
-  height: 12px;
 }
 
 @media (max-width: 768px) {
@@ -220,5 +134,9 @@ input:not(:placeholder-shown) + .label-holder img {
   .step-action button {
     background-color: var(--purple-primary);
     color: var(--white-primary);
+  }
+
+  .two-form-controls {
+    flex-direction: column;
   }
 }
