--- a/src/components/FlightContent/FlightContent.module.css
+++ b/src/components/FlightContent/FlightContent.module.css
@@ -83,10 +83,10 @@
   width: 32px;
   height: 32px;
   margin: 4px;
-  border: 4px solid #fff;
+  border: 4px solid var(--white-primary);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
+  border-color: var(--white-primary) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
