--- a/src/components/Step1/Step1.module.css
+++ b/src/components/Step1/Step1.module.css
@@ -44,13 +44,13 @@
   flex-grow: 0;
 }
 
-.step-action button img {
-  width: 1.125rem;
-}
-
 .step-action button:hover {
   background-color: var(--purple-secondary);
   color: var(--white-primary);
+}
+
+.step-action button:hover img {
+  transform: translateX(4px);
 }
 
 .step-action button:disabled {
