--- a/src/components/Step3/Step3.module.css
+++ b/src/components/Step3/Step3.module.css
@@ -44,22 +44,22 @@
   flex-grow: 0;
 }
 
-.step-action button img {
-  width: 1.125rem;
-}
-
 .step-action button:hover {
   background-color: var(--purple-secondary);
   color: var(--white-primary);
 }
 
 .step-action button:disabled {
-  background-color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.step-action button:disabled img {
+  opacity: 0;
 }
 
 .step-action button:disabled:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-  color: #000;
+  background-color: var(--purple-primary);
+  color: rgba(255, 255, 255, 0.1);
 }
 
 .step-3__holder {
@@ -147,6 +147,51 @@
 
 .payment-card-number p span {
   color: #6a6a6a;
+}
+
+.lds-ring {
+  display: flex;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: center;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #000;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #000 transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+.error-text {
+  color: red;
+  font-weight: 500;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media (max-width: 768px) {
