--- a/src/components/ThroughYears/AchievementItem/AchievementItem.module.css
+++ b/src/components/ThroughYears/AchievementItem/AchievementItem.module.css
@@ -42,9 +42,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
+  display: none;
 }
 
 .content-div:first-of-type {
@@ -58,10 +56,7 @@
 .item-holder.item-active .item-content {
   position: relative;
   transition: 500ms ease-out;
-  visibility: visible;
-  animation: opacityDelay 0.5s ease forwards;
-  animation-delay: 0.05s;
-  pointer-events: all;
+  display: flex;
 }
 
 @keyframes opacityDelay {
@@ -70,5 +65,11 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-holder h4 {
+    font-size: 1rem;
   }
 }
