--- a/src/components/CheckFlightStatusModal/CheckFlightStatusModal.module.css
+++ b/src/components/CheckFlightStatusModal/CheckFlightStatusModal.module.css
@@ -18,7 +18,7 @@
   padding: 2rem;
   border-radius: 5px;
   max-width: 90vw;
-  width: 900px;
+  width: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@
   justify-content: center;
   margin-bottom: 18px;
   align-items: center;
-  gap: 8px;
+  gap: 16px;
   flex-direction: column;
 }
 
@@ -46,6 +46,7 @@
 .inner-modal h5 {
   font-size: 1rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .non-existing-content {
@@ -65,7 +66,7 @@
 }
 
 .non-existing-content img {
-  width: 3rem;
+  width: 4rem;
 }
 
 .inner-modal button {
@@ -73,8 +74,8 @@
   color: var(--purple-primary);
   border: 2px solid var(--purple-primary);
   align-self: center;
-  width: 250px;
   height: 45px;
+  font-weight: 500;
 }
 
 .inner-modal button:hover {
@@ -124,16 +125,13 @@
   .inner-modal {
     padding: 2rem 1rem;
   }
-  .non-existing-content img {
-    width: 3rem;
-  }
 
   .non-existing-content h4 {
     font-size: 1rem;
   }
 
-  .non-existing-content button {
-    width: 100%;
+  .non-existing-content img {
+    width: 3rem;
   }
 
   .inner-modal__content h5 {
