--- a/src/components/CheckReservationModal/CheckReservationModal.module.css
+++ b/src/components/CheckReservationModal/CheckReservationModal.module.css
@@ -17,7 +17,7 @@
   transform: translate(-50%, -50%);
   padding: 2rem;
   border-radius: 5px;
-  width: 700px;
+  width: 400px;
   max-width: 90vw;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .res-modal div img {
-  width: 4rem;
+  width: 3rem;
 }
 
 .res-modal h4 {
@@ -73,8 +73,8 @@
   color: var(--purple-primary);
   border: 2px solid var(--purple-primary);
   align-self: center;
-  width: 250px;
   height: 45px;
+  font-weight: 500;
 }
 
 .inner-modal button:hover {
@@ -94,12 +94,12 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 8px;
+  gap: 16px;
   width: 100%;
 }
 
 .non-existing-content img {
-  width: 3rem;
+  width: 4rem;
 }
 
 .non-existing-content p {
@@ -158,5 +158,9 @@
 
   .res-modal h5 {
     font-size: 0.875rem;
+  }
+
+  .non-existing-content img {
+    width: 3rem;
   }
 }
