--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   margin-bottom: 32px;
   max-width: 90vw;
+  width: 900px;
   margin: 0 auto 32px auto;
 }
 
@@ -74,42 +75,6 @@
   height: 16px;
 }
 
-.contact-info {
-  max-width: 90vw;
-  margin: 80px auto 0 auto;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 16px;
-}
-
-.info-item {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-}
-
-.info-holder {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 8px;
-}
-
-.info-holder a {
-  text-decoration: none;
-  font-weight: 600;
-  color: #000;
-  border-bottom: 2px solid #000;
-  width: fit-content;
-  transition: 250ms ease-out;
-}
-
-.info-holder a:hover {
-  color: var(--purple-primary);
-  border-bottom-color: var(--purple-primary);
-}
-
 @media (max-width: 768px) {
   .contact-form {
     display: flex;
@@ -118,10 +83,5 @@
 
   .contact-social {
     justify-content: center;
-  }
-
-  .contact-info {
-    flex-direction: column;
-    margin-top: 16px;
   }
 }
